--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -7,9 +7,10 @@
     background-color: #181818;
     color: #fff;
     margin: auto;
+    display: flex;
 
     &-cards {
-        width: 90%;
+        width: 100%;
         height: 100vh;
         margin: auto;
         display: flex;
@@ -27,7 +28,9 @@
         margin: 1em;
         position: relative;
         border-radius: 15px;
-        opacity: 0.0;
+        /* opacity: 0.0; */
+        opacity: 1.0;
+        cursor: pointer;
     }
     
     &-title {
