--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -10,7 +10,7 @@
     display: flex;
 
     &-cards {
-        width: 100%;
+        max-width: 80%;
         height: 100vh;
         margin: auto;
         display: flex;
@@ -20,6 +20,7 @@
         text-align: center;
         flex-wrap: wrap;
         padding: 2em;
+
     }
 
     &-card {
@@ -28,9 +29,21 @@
         margin: 1em;
         position: relative;
         border-radius: 15px;
-        /* opacity: 0.0; */
-        opacity: 1.0;
+        opacity: 1;
         cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &-hover {
+            display: block;
+            opacity: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #f3d34a;
+        }
     }
     
     &-title {
