Premiere version graphique sans contenu

--- a/src/components/Cv/cv.scss
+++ b/src/components/Cv/cv.scss
@@ -9,7 +9,7 @@
     align-items: center;
     align-content: center;
     flex-direction: column;
-    background-color: rgb(5, 19, 44);
+    background-image: linear-gradient(to right bottom, #181818, #222122, #2d2b2c, #393536, #45403f, #45403f, #46403f, #46403f, #3c3637, #312c2e, #252326, #1a1a1e);
     color: #fff;
     position: relative;
 }
