--- a/src/App.css
+++ b/src/App.css
@@ -8,19 +8,37 @@
 }
 
 body {
-  /* background-color: #001f41; */
-  /* background-color: ##181818; */
+  max-width: 100vw;
   background-color: #282C34;
   font-family: 'Montserrat', sans-serif;
-  /* overflow: hidden; /* Hide scrollbars */
   overflow-x: hidden;
-}
-
-.container {
-
-  /* */
 }
 
 a {
   text-decoration: none!important;
+}
+
+.active {
+  color: #f3d34a;
+  font-weight: 600;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #1D1D1D; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #4e4646; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #F3D24A; 
 }
