--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -3,13 +3,12 @@
 .menu {
 
   width: 100%;
-  background-color: #1a1a1e;
   position: fixed;
   z-index: 19;
   display: grid;
   grid-template-columns: 33% 33% 33%;
   grid-template-rows: 50px;
-  visibility: hidden;
+  visibility: visible;
 
   &-logo {
     color: white;
@@ -17,60 +16,96 @@
     align-self: center;
     font-weight: 900;
     font-size: 1.3em;
+    z-index: 9999;
   }
 }
 
 .text-area {
-    text-align: center;
+  text-align: center;
+}
+
+a {
+  color: white;
+  cursor: pointer;
+
+  &:hover {
+    stroke: lighten(#ef5435, 30%);
   }
-  a {
-    color: white;
-    cursor: pointer;
-    &:hover {
-      stroke: lighten(#ef5435, 30%);
+}
+
+button {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  align-items: flex-end;
+  z-index: 20;
+  transform: translate(-50%, -50%);
+  background-color: transparent;
+  -webkit-appearance: none;
+  border: none;
+  outline: none;
+  stroke: white;
+  cursor: pointer;
+  transition: all 175ms ease-in-out;
+  
+  &:hover {
+    stroke: lighten(#ef5435, 30%);
+  }
+}
+
+svg { 
+  width: 30px; /* width: 50px; sur bureau */
+}
+
+#burger-bar-one {
+  opacity: 1;
+  stroke-dasharray: 412px 1500px;
+}
+#burger-bar-two {
+  opacity: 1;
+  stroke-dasharray: 412px 1500px;
+}
+#burger-bar-three {
+  opacity: 1;
+}
+
+.path {
+  fill: transparent;
+  stroke-width: 67px;
+  stroke: #000000;
+  stroke-linecap: round;
+  opacity: 0;
+  stroke: inherit;
+}
+
+.menu-modal {
+  width: 100%;
+  height: 140px;
+  background-color: #1b1b1b;
+  position: absolute;
+  opacity: 0;
+  visibility: hidden;
+
+  &_links {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: auto;
+    margin-top: 1em;
+
+    &__item {
+      width: 33%;
+      line-height: 2em;
+      text-align: center;
     }
   }
-  button {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    z-index: 20;
-    transform: translate(-50%, -50%);
-    background-color: transparent;
-    -webkit-appearance: none;
-    border: none;
-    outline: none;
-    stroke: white;
-    cursor: pointer;
-    transition: all 175ms ease-in-out;
-    
-    &:hover {
-      stroke: lighten(#ef5435, 30%);
-    }
-  }
-  svg { 
-    width: 30px; /* width: 50px; sur bureau */
-  }
-  
-  #burger-bar-one {
-    opacity: 1;
-    stroke-dasharray: 412px 1500px;
-  }
-  #burger-bar-two {
-    opacity: 1;
-    stroke-dasharray: 412px 1500px;
-  }
-  #burger-bar-three {
-    opacity: 1;
-  }
-  
-  .path {
-    fill: transparent;
-    stroke-width: 67px;
-    stroke: #000000;
-    stroke-linecap: round;
-    opacity: 0;
-    stroke: inherit;
-  }
-  
-  
+
+}
+
+.menu-construction {
+  margin-top: 1em;
+  text-align: center;
+  color: white;
+}
