--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -2,15 +2,15 @@
 
 .portfolio {
 
-    max-width: 100%;
+    width: 100%;
     height: 100vh;
-    background-color: #181818;
+    background-image: linear-gradient(to right top, #1a1a1e, #252326, #312c2e, #3c3637, #46403f, #46403f, #45403f, #45403f, #393536, #2d2b2c, #222122, #181818);
     color: #fff;
     margin: auto;
     display: flex;
 
     &-cards {
-        max-width: 80%;
+        max-width: 50%;
         height: 100vh;
         margin: auto;
         display: flex;
@@ -20,7 +20,6 @@
         text-align: center;
         flex-wrap: wrap;
         padding: 2em;
-
     }
 
     &-card {
@@ -61,10 +60,10 @@
         border-radius: 15px;
         pointer-events:none;
     }
+
     &-btn {
         position: absolute;
         bottom: 0;
         right: 0;
-        
     }
 }
