--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -8,9 +8,10 @@
     color: #fff;
     margin: auto;
     display: flex;
+    position: relative;
 
     &-cards {
-        max-width: 50%;
+        max-width: 1000px;
         height: 100vh;
         margin: auto;
         display: flex;
@@ -23,7 +24,7 @@
     }
 
     &-card {
-        width: 28%;
+        width: 30%;
         min-width: 250px;
         margin: 1em;
         position: relative;
