--- a/src/components/App/app.css
+++ b/src/components/App/app.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  max-width: 100vw;
+  
   background-color: #282C34;
   font-family: 'Montserrat', sans-serif;
   overflow-x: hidden;
@@ -19,7 +19,7 @@ a {
 }
 
 .active {
-  color: #f3d34a;
+  color: #f3d34a!important;
   font-weight: 600;
 }
 
