--- a/src/components/Cv/cv.scss
+++ b/src/components/Cv/cv.scss
@@ -26,7 +26,7 @@
 }
 
 .cv-parcours {
-    margin: 1.5em auto 2.5em auto ;
+    margin: 1em auto;
     max-width: 1200px;
     display: flex;
     justify-content: space-around;
