--- a/src/components/Presentation/presentation.scss
+++ b/src/components/Presentation/presentation.scss
@@ -1,7 +1,7 @@
 
 .presentation {
   position: relative;
-  max-width: 100%;
+  width: 100%;
   height: 100vh;
   margin: auto;
   display: flex;
@@ -9,6 +9,7 @@
   align-items: center;
   align-content: center;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .photo {
