--- a/src/components/Presentation/presentation.scss
+++ b/src/components/Presentation/presentation.scss
@@ -58,7 +58,7 @@
 }
 
 .social-icons {
-  width: 80px;
+  width: 140px;
   margin: 1em auto;
   display: flex;
   justify-content: space-around;
@@ -91,10 +91,10 @@
   display: block;
 }
 
-.github-icon {
+.icon {
   font-size: 2em;
 }
 
-.linkedin-icon {
-  font-size: 2em;
+.icon-s {
+  font-size: 1.8em;
 }
