--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -19,3 +19,19 @@
         }
     }
 }
+
+.contact input, .contact textarea{
+    background-color: #181818!important;
+    color: #fff!important;
+    resize: none!important;
+}
+
+.input > .icon {
+    color: #fff
+}
+
+.contact h3 {
+    font-size: 1.9em;
+    padding-bottom: 1em;
+    text-align: center;
+}
