--- a/src/components/Cv/cv.scss
+++ b/src/components/Cv/cv.scss
@@ -4,7 +4,21 @@
     max-width: 100%;
     height: 100vh;
     padding: 1.5em;
-    background-image: linear-gradient(to right bottom, #181818, #222122, #2d2b2c, #393536, #45403f, #45403f, #46403f, #46403f, #3c3637, #312c2e, #252326, #1a1a1e);
+    background-image: linear-gradient(
+        to right bottom,
+        #181818,
+        #222122,
+        #2d2b2c,
+        #393536,
+        #45403f,
+        #45403f,
+        #46403f,
+        #46403f,
+        #3c3637,
+        #312c2e,
+        #252326,
+        #1a1a1e
+    );
     color: #fff;
     position: relative;
     display: flex;
@@ -14,10 +28,10 @@
 
 .cv-presentation {
     width: 100%;
-    margin: 1.5em auto 1em auto ;
+    margin: 1.5em auto 1em auto;
     text-align: center;
     opacity: 0;
-    
+
     p {
         max-width: 800px;
         margin: 1em auto;
@@ -33,13 +47,15 @@
     opacity: 0;
 }
 
-.experiences {
+.experiences_container {
     width: 40%;
+}
 
+.experiences {
     &-title {
         text-align: center;
         padding-bottom: 1em;
-        color: #F3D24A;
+        color: #f3d24a;
     }
 }
 
@@ -51,12 +67,11 @@
         align-items: center;
         font-size: 1.2em;
         font-weight: 600;
-
     }
 
     &-date {
         font-weight: 100;
-        font-size: .8em;
+        font-size: 0.8em;
         padding: 1em 0;
     }
 
@@ -64,7 +79,7 @@
         line-height: 1.5em;
 
         p {
-            padding: .3em 0;
+            padding: 0.3em 0;
         }
     }
 }
@@ -77,20 +92,25 @@
 .parcours-hr {
     width: 20%;
     height: 250px;
-    border: 2px solid #F3D24A;
+    border: 2px solid #f3d24a;
+}
+
+.formations_container {
+    width: 40%;
 }
 
 .formations {
-    width: 40%;
+    //width: 40%;
 
     &-title {
         text-align: center;
         padding-bottom: 1em;
-        color: #F3D24A;
+        color: #f3d24a;
     }
 }
 
 .formation {
+    margin: 2em 0;
 
     &-name {
         display: flex;
@@ -101,7 +121,7 @@
 
     &-date {
         font-weight: 100;
-        font-size: .8em;
+        font-size: 0.8em;
         padding: 1em 0;
     }
 
@@ -109,7 +129,7 @@
         line-height: 1.5em;
 
         p {
-            padding: .3em 0;
+            padding: 0.3em 0;
         }
     }
 }
@@ -135,7 +155,7 @@
 }
 
 .competence-label {
-    padding-top: .5em;
+    padding-top: 0.5em;
 }
 
 .cv-download {
