Add Qovery Engine project

--- a/src/components/Portfolio/Modal/modal.scss
+++ b/src/components/Portfolio/Modal/modal.scss
@@ -118,12 +118,11 @@
 .project-image {
     display: block;
     width: 100%;
-    height: auto;
-    margin: auto;
+    margin: 0 auto;
 }
 
 .project-video {
     width: 560px;
     height: 315px;
-    margin: auto;
+    margin: 0 auto;
 }
