--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -1,10 +1,23 @@
 /* Portfolio */
 
 .portfolio {
-
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(to right top, #1a1a1e, #252326, #312c2e, #3c3637, #46403f, #46403f, #45403f, #45403f, #393536, #2d2b2c, #222122, #181818);
+    background-image: linear-gradient(
+        to right top,
+        #1a1a1e,
+        #252326,
+        #312c2e,
+        #3c3637,
+        #46403f,
+        #46403f,
+        #45403f,
+        #45403f,
+        #393536,
+        #2d2b2c,
+        #222122,
+        #181818
+    );
     color: #fff;
     margin: auto;
     display: flex;
@@ -47,7 +60,7 @@
             color: #f3d34a;
         }
     }
-    
+
     &-title {
         position: absolute;
         top: 0;
@@ -61,7 +74,7 @@
         display: block;
         max-width: 100%;
         border-radius: 15px;
-        pointer-events:none;
+        pointer-events: none;
     }
 
     &-btn {
