--- a/src/components/Cv/cv.scss
+++ b/src/components/Cv/cv.scss
@@ -91,7 +91,7 @@
 
 .parcours-hr {
     width: 20%;
-    height: 250px;
+    height: 350px;
     border: 2px solid #f3d24a;
 }
 
@@ -130,6 +130,10 @@
 
         p {
             padding: 0.3em 0;
+        }
+
+        a {
+            color: #f3d14a !important;
         }
     }
 }
