--- a/src/components/Cv/cv.scss
+++ b/src/components/Cv/cv.scss
@@ -2,7 +2,7 @@
 
 .cv {
     max-width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     padding: 1.5em;
     background-image: linear-gradient(
         to right bottom,
@@ -122,7 +122,11 @@
     &-date {
         font-weight: 100;
         font-size: 0.8em;
-        padding: 1em 0;
+        padding: 0.5em 0;
+
+        a {
+            color: #f3d14a !important;
+        }
     }
 
     &-content {
@@ -130,10 +134,6 @@
 
         p {
             padding: 0.3em 0;
-        }
-
-        a {
-            color: #f3d14a !important;
         }
     }
 }
