--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -22,9 +22,10 @@
     margin: auto;
     display: flex;
     position: relative;
-    overflow-x: hidden;
+    //overflow-x: hidden;
 
     &-cards {
+        width: 100%;
         max-width: 1000px;
         height: 100vh;
         margin: auto;
@@ -35,6 +36,7 @@
         text-align: center;
         flex-wrap: wrap;
         padding: 2em;
+        overflow: auto;
     }
 
     &-card {
